Solved a small-screen category display layout issue.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -51,7 +51,7 @@
 }
 
 @utility list-container-rows {
-  @apply columns-2 lg:columns-4 space-y-5;
+  @apply columns-1 md:columns-2 lg:columns-3 space-y-5;
 }
 
 @utility single-article {
